// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`help command global help message: help -e 1`] = `
"当前可用的指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    bar (1*)  BAR
    help (0*)  显示帮助信息
注：部分指令组已展开，故不再显示。
群聊普通指令可以通过“@我+指令名”的方式进行触发。
私聊或全局指令则不需要添加上述前缀，直接输入指令名即可触发。
输入“全局指令”查看全部可用的全局指令。
输入“帮助+指令名”查看特定指令的语法和使用示例。"
`;

exports[`help command global help message: help -s 1`] = `"当前可用的全局指令有：帮助，全局指令。"`;

exports[`help command global help message: help 1`] = `
"当前可用的指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    help (0*)  显示帮助信息
群聊普通指令可以通过“@我+指令名”的方式进行触发。
私聊或全局指令则不需要添加上述前缀，直接输入指令名即可触发。
输入“全局指令”查看全部可用的全局指令。
输入“帮助+指令名”查看特定指令的语法和使用示例。"
`;

exports[`help command show command help: bar -h 1`] = `
"bar
BAR
中文别名：bar。
usage text
可用的选项有：
    -h, --help  显示本信息
使用示例：
    example 1
    example 2
可用的子指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    bar.baz (1)  BAZ"
`;

exports[`help command show command help: help -h 1`] = `
"help [command]
显示帮助信息
中文别名：help。
相关全局指令：帮助，全局指令。
可用的选项有：
    -h, --help  显示本信息
    -e, --expand  展开指令列表
    -s, --shortcut  查看全局指令列表
可用的子指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    bar (1*)  BAR
    help.foo (1)  FOO"
`;

exports[`help command show command help: help bar 1`] = `
"bar
BAR
中文别名：bar。
usage text
可用的选项有：
    -h, --help  显示本信息
使用示例：
    example 1
    example 2
可用的子指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    bar.baz (1)  BAZ"
`;

exports[`help command show command help: help help 1`] = `
"help [command]
显示帮助信息
中文别名：help。
相关全局指令：帮助，全局指令。
可用的选项有：
    -h, --help  显示本信息
    -e, --expand  展开指令列表
    -s, --shortcut  查看全局指令列表
可用的子指令有（括号内为对应的最低权限等级，标有星号的表示含有子指令）：
    bar (1*)  BAR
    help.foo (1)  FOO"
`;
